5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4081/executions/1601_2426.log
== TEST (2019-03-28 12:32:56) 
-- CODE:
tempo= float(input("tempo gasto: "))
velocidade= float(input("velocidade media do carro: "))
distancia= float(input("distancia percorrida: "))
litros= float(input("quantidade de litros: "))
autonomia=12.0 km
print(distancia/litros)
-- ERROR:
File "XXXX", line 5
    autonomia=12.0 km
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 12:33:04) 
-- CODE:
tempo= float(input("tempo gasto: "))
velocidade= float(input("velocidade media do carro: "))
distancia= float(input("distancia percorrida: "))
litros= float(input("quantidade de litros: "))

print(distancia/litros)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    distancia= float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 12:36:46) 
-- CODE:
tempo= float(input("tempo gasto: "))
velocidade= float(input("velocidade media do carro: "))
distancia= float(input("distancia percorrida: "))
litros= float(input("quantidade de litros: "))
autonomiadoveiculo= (12 km)
print(distancia/litros)

-- ERROR:
File "XXXX", line 5
    autonomiadoveiculo= (12 km)
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 12:36:46) 
-- CODE:
tempo= float(input("tempo gasto: "))
velocidade= float(input("velocidade media do carro: "))
distancia= float(input("distancia percorrida: "))
litros= float(input("quantidade de litros: "))
autonomiadoveiculo= (12 km)
print(distancia/litros)

-- ERROR:
File "XXXX", line 5
    autonomiadoveiculo= (12 km)
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 12:36:47) 
-- CODE:
tempo= float(input("tempo gasto: "))
velocidade= float(input("velocidade media do carro: "))
distancia= float(input("distancia percorrida: "))
litros= float(input("quantidade de litros: "))
autonomiadoveiculo= (12 km)
print(distancia/litros)

-- ERROR:
File "XXXX", line 5
    autonomiadoveiculo= (12 km)
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 12:36:49) 
-- CODE:
tempo= float(input("tempo gasto: "))
velocidade= float(input("velocidade media do carro: "))
distancia= float(input("distancia percorrida: "))
litros= float(input("quantidade de litros: "))
autonomiadoveiculo= (12 km)
print(distancia/litros)

-- ERROR:
File "XXXX", line 5
    autonomiadoveiculo= (12 km)
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 12:36:50) 
-- CODE:
tempo= float(input("tempo gasto: "))
velocidade= float(input("velocidade media do carro: "))
distancia= float(input("distancia percorrida: "))
litros= float(input("quantidade de litros: "))
autonomiadoveiculo= (12 km)
print(distancia/litros)

-- ERROR:
File "XXXX", line 5
    autonomiadoveiculo= (12 km)
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 12:36:50) 
-- CODE:
tempo= float(input("tempo gasto: "))
velocidade= float(input("velocidade media do carro: "))
distancia= float(input("distancia percorrida: "))
litros= float(input("quantidade de litros: "))
autonomiadoveiculo= (12 km)
print(distancia/litros)

-- ERROR:
File "XXXX", line 5
    autonomiadoveiculo= (12 km)
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 12:36:50) 
-- CODE:
tempo= float(input("tempo gasto: "))
velocidade= float(input("velocidade media do carro: "))
distancia= float(input("distancia percorrida: "))
litros= float(input("quantidade de litros: "))
autonomiadoveiculo= (12 km)
print(distancia/litros)

-- ERROR:
File "XXXX", line 5
    autonomiadoveiculo= (12 km)
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 12:36:50) 
-- CODE:
tempo= float(input("tempo gasto: "))
velocidade= float(input("velocidade media do carro: "))
distancia= float(input("distancia percorrida: "))
litros= float(input("quantidade de litros: "))
autonomiadoveiculo= (12 km)
print(distancia/litros)

-- ERROR:
File "XXXX", line 5
    autonomiadoveiculo= (12 km)
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 12:36:57) 
-- CODE:
tempo= float(input("tempo gasto: "))
velocidade= float(input("velocidade media do carro: "))
distancia= float(input("distancia percorrida: "))
litros= float(input("quantidade de litros: "))
autonomiadoveiculo= (12 km)
print(distancia/litros)

-- ERROR:
File "XXXX", line 5
    autonomiadoveiculo= (12 km)
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 12:37:00) 
-- CODE:
tempo= float(input("tempo gasto: "))
velocidade= float(input("velocidade media do carro: "))
distancia= float(input("distancia percorrida: "))
litros= float(input("quantidade de litros: "))
autonomiadoveiculo= (12 km)
print(distancia/litros)

-- ERROR:
File "XXXX", line 5
    autonomiadoveiculo= (12 km)
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 12:37:22) 
-- CODE:
tempo= float(input("tempo gasto: "))
velocidade= float(input("velocidade media do carro: "))
distancia= float(input("distancia percorrida: "))
litros= float(input("quantidade de litros: "))

print(distancia/litros)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    distancia= float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 12:38:16) 
-- CODE:
tempo= float(input("tempo gasto: "))
velocidade= float(input("velocidade media do carro: "))
distancia= int(input("distancia percorrida: "))
litros= int(input("quantidade de litros: "))

print(distancia/litros)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    distancia= int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 12:38:21) 
-- CODE:
tempo= float(input("tempo gasto: "))
velocidade= float(input("velocidade media do carro: "))
distancia= int(input("distancia percorrida: "))
litros= int(input("quantidade de litros: "))

print(distancia/litros)

-- EXECUTION TIME:
0.202784
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1601/2426/main.py", line 3, in <module>
    distancia= int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 12:38:23) 
-- CODE:
tempo= float(input("tempo gasto: "))
velocidade= float(input("velocidade media do carro: "))
distancia= int(input("distancia percorrida: "))
litros= int(input("quantidade de litros: "))

print(distancia/litros)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    distancia= int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 12:41:19) 
-- CODE:
tempo= float(input("tempo gasto: "))
velocidade= float(input("velocidade media do carro: "))

print(tempo/velocidade)

-- OUTPUT:
0.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
